# my-timetagger

./: .env.example  .gitignore  README.md  docker-compose.yaml
analytics_app/: .dockerignore  Dockerfile  README.md  app.py  db.py  pyproject.toml
